--- a/GolfApp/Storyboard/ReservationViewController.storyboard
+++ b/GolfApp/Storyboard/ReservationViewController.storyboard
@@ -6,10 +6,11 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Title-->
+        <!--Reservation View Cell View Controller-->
         <scene sceneID="5TA-rB-eoR">
             <objects>
                 <viewController id="cpW-qj-a41" customClass="ReservationViewCellViewController" customModule="GolfApp" customModuleProvider="target" sceneMemberID="viewController">
@@ -18,63 +19,78 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="yaP-lP-FaA">
-                                <rect key="frame" x="16" y="85" width="361" height="703"/>
+                                <rect key="frame" x="0.0" y="59" width="393" height="729"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Hyi-6Z-tcN">
-                                        <rect key="frame" x="0.0" y="0.0" width="361" height="2000"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="393" height="2000"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="d0w-2x-Rea">
-                                                <rect key="frame" x="0.0" y="10" width="353" height="253"/>
+                                                <rect key="frame" x="20" y="8" width="353" height="253"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" relation="lessThanOrEqual" constant="353" id="jPk-rl-lh9"/>
                                                     <constraint firstAttribute="height" relation="lessThanOrEqual" constant="255" id="s94-ky-tHi"/>
                                                 </constraints>
                                             </imageView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="이름 / 국적" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vom-Rq-ljO">
-                                                <rect key="frame" x="87" y="273" width="178" height="21"/>
+                                                <rect key="frame" x="104" y="273" width="178" height="21"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <datePicker contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" style="inline" translatesAutoresizingMaskIntoConstraints="NO" id="yvp-K1-vYJ">
-                                                <rect key="frame" x="21" y="302" width="320" height="307"/>
-                                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                            </datePicker>
-                                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="Abe-gk-Gd9">
-                                                <rect key="frame" x="20" y="617" width="321" height="324"/>
+                                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" delaysContentTouches="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="CJt-By-kuu">
+                                                <rect key="frame" x="21" y="666" width="352" height="413"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                                <prototypes>
-                                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ReservationCell" id="Ht3-wF-Oct" customClass="ReservationCell" customModule="GolfApp" customModuleProvider="target">
-                                                        <rect key="frame" x="0.0" y="50" width="321" height="43.666667938232422"/>
-                                                        <autoresizingMask key="autoresizingMask"/>
-                                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Ht3-wF-Oct" id="Nqi-oD-Lh7">
-                                                            <rect key="frame" x="0.0" y="0.0" width="321" height="43.666667938232422"/>
+                                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="otU-ku-WKU">
+                                                    <size key="itemSize" width="100" height="100"/>
+                                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                                </collectionViewFlowLayout>
+                                                <cells>
+                                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ReservationCell" id="6jr-TK-V4Z" customClass="ReservationCell" customModule="GolfApp" customModuleProvider="target">
+                                                        <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="iOT-Iv-VEl">
+                                                            <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
                                                             <autoresizingMask key="autoresizingMask"/>
                                                             <subviews>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mtb-NG-pnN">
-                                                                    <rect key="frame" x="20" y="11" width="178" height="21"/>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="시간" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v51-8d-AUB">
+                                                                    <rect key="frame" x="0.0" y="36" width="100" height="29"/>
                                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                             </subviews>
-                                                        </tableViewCellContentView>
+                                                        </collectionViewCellContentView>
+                                                        <color key="backgroundColor" systemColor="systemGreenColor"/>
+                                                        <size key="customSize" width="100" height="100"/>
                                                         <connections>
-                                                            <outlet property="label" destination="mtb-NG-pnN" id="a8k-Vf-Uv7"/>
+                                                            <outlet property="timeLabel" destination="v51-8d-AUB" id="fkV-Kd-GE5"/>
                                                         </connections>
-                                                    </tableViewCell>
-                                                </prototypes>
+                                                    </collectionViewCell>
+                                                </cells>
                                                 <connections>
-                                                    <outlet property="dataSource" destination="cpW-qj-a41" id="6ec-Ik-X4L"/>
-                                                    <outlet property="delegate" destination="cpW-qj-a41" id="Zjv-qg-7cM"/>
+                                                    <outlet property="dataSource" destination="cpW-qj-a41" id="tne-Q6-yCq"/>
+                                                    <outlet property="delegate" destination="cpW-qj-a41" id="BWR-x9-7Kf"/>
                                                 </connections>
-                                            </tableView>
+                                            </collectionView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="날짜" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bjp-Xr-Fdt">
+                                                <rect key="frame" x="21" y="617" width="158" height="41"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <datePicker contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" style="inline" translatesAutoresizingMaskIntoConstraints="NO" id="yvp-K1-vYJ">
+                                                <rect key="frame" x="21" y="302" width="352" height="307"/>
+                                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                            </datePicker>
                                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tjA-I9-loM">
-                                                <rect key="frame" x="114" y="949" width="133" height="61"/>
+                                                <rect key="frame" x="131" y="1087" width="133" height="61"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="plain" title="예약하기"/>
@@ -103,10 +119,11 @@
                         <viewLayoutGuide key="safeArea" id="Rfm-69-n5H"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Title" id="xNI-cv-fhG"/>
+                    <navigationItem key="navigationItem" id="xNI-cv-fhG"/>
                     <connections>
+                        <outlet property="dateCollectionView" destination="CJt-By-kuu" id="yas-PJ-7Ay"/>
+                        <outlet property="dateLabel2" destination="Bjp-Xr-Fdt" id="2rS-EW-jCD"/>
                         <outlet property="datePicker" destination="yvp-K1-vYJ" id="xzH-AA-htG"/>
-                        <outlet property="dateTableView" destination="Abe-gk-Gd9" id="ZJP-dU-qUn"/>
                         <outlet property="proImage" destination="d0w-2x-Rea" id="SCI-9R-KYq"/>
                         <outlet property="proInfo" destination="Vom-Rq-ljO" id="woa-ac-pPy"/>
                     </connections>
@@ -119,6 +136,9 @@
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
